# orbit_simulator

./: CMakeLists.txt
gui/: CMakeLists.txt  circle.hpp  color.hpp  rect.hpp  shape.hpp  simulation_display.cpp  simulation_display.hpp  window.cpp  window.hpp
gui/cmake/Modules/: FindSDL2.cmake
main/: CMakeLists.txt  main.cpp
simulation/: CMakeLists.txt  logger.hpp  object.cpp  object.hpp  simulator.cpp  simulator.hpp  vec2.hpp
test/: CMakeLists.txt
test/testgui/: CMakeLists.txt  simulator_display_test.cpp
test/testsim/: CMakeLists.txt  object_test.cpp  simulator_test.cpp
